Bug#44069 ndb_restore crash from bus error when restoring packed data - Generic support for moving unaligned data to aligned data, then call the function to swap the byte order. - Add code to do double Twiddle in debug mode since the most common case is that we restore a file in host byte order. This is to get better test coverage. - If data need to be aligned, put it in m_twiddle_buffer which will live for the lifetime of the BackupFile and may thus grow to the maximum data size of an atribute, but still we only need to alloc/realloc it a few times - Free memory allocated with malloc using free and not "array delete" - Remove unusued third arg to 'Twiddle' plus some unused code and comments. - Change testcases to not use "IF TABLE EXIST" when we know the table should exist. - Move tests  for ndb_restore --include/--exclude to ndb_restore_options.test this saves valuable test time, since ndb_restore.test is run two times - with and without compresssion.